<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/infor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/infor_name"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="5dp"
        android:background="#DFDFDF"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_type"
                android:textSize="12sp"
                android:textColor="@color/red" />
            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:fadingEdge="none">
                <RadioButton
                    android:id="@+id/choose_food"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="food"
                    android:textSize="15sp"
                    android:button="@color/black"
                    android:textColor="@drawable/color_radiobutton"
                    android:background="@drawable/radio_group_selector" />
                <RadioButton
                    android:id="@+id/choose_trip"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:text="trip"
                    android:textSize="15sp"
                    android:button="@color/black"
                    android:textColor="@drawable/color_radiobutton"
                    android:background="@drawable/radio_group_selector"/>
                <RadioButton
                    android:id="@+id/choose_mall"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:text="mall"
                    android:textSize="15sp"
                    android:button="@color/black"
                    android:textColor="@drawable/color_radiobutton"
                    android:background="@drawable/radio_group_selector"/>
                <RadioButton
                    android:id="@+id/choose_other"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:text="other"
                    android:textSize="15sp"
                    android:button="@color/black"
                    android:textColor="@drawable/color_radiobutton"
                    android:background="@drawable/radio_group_selector"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_name"
                android:textSize="12sp"
                android:textColor="@color/red"/>
            <EditText
                android:id="@+id/name_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/place_name_hint"
                android:textSize="12sp"
                android:background="@android:drawable/alert_light_frame"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_description"
                android:textSize="12sp"
                android:textColor="@color/red"/>

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/place_description_hint"
                android:textSize="12sp"
                android:background="@android:drawable/alert_light_frame"
                android:lines="5"
                android:gravity="top|left"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>